# lean-agent-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/lean-agent-cli/: Cargo.toml
crates/lean-agent-cli/src/: main.rs
crates/lean-agent-core/: Cargo.toml
crates/lean-agent-core/schemas/: attempt.schema.json  eval_result.schema.json  eval_task.schema.json  mine_task.schema.json  replay_result.schema.json  runner_response.schema.json  trace_record.schema.json
crates/lean-agent-core/src/: accept.rs  config.rs  context.rs  diagnostics.rs  discover.rs  error.rs  eval.rs  goal_probe.rs  lib.rs  mine.rs  patch.rs  process.rs  replay.rs  report.rs  trace.rs  types.rs  workspace.rs  writer.rs
crates/lean-agent-core/tests/: accept_guards.rs  goal_probe.rs  snapshot_tests.rs
crates/lean-agent-core/tests/fixtures/: diagnostics_multi.stderr  sorry_sample.lean  unsolved_goal.stderr
crates/lean-agent-core/tests/snapshots/: snapshot_tests__context_extraction.snap  snapshot_tests__diagnostic_parsing.snap  snapshot_tests__patch_application_record.snap  snapshot_tests__patch_application_source.snap  snapshot_tests__sorry_mining.snap
docs/rfcs/: 0001-tracing-mvp.md
scripts/: echo_runner.sh
