[workspace]
resolver = "2"
members = [
  "crates/lean-agent-core",
  "crates/lean-agent-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Rob Sneiderman <robbysneiderman@gmail.com>"]
repository = "https://github.com/Robby955/lean-agent-rs"
homepage = "https://github.com/Robby955/lean-agent-rs"
documentation = "https://docs.rs/lean-agent-core"
readme = "README.md"
keywords = ["lean", "formal-methods", "theorem-proving", "agents", "rust"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
lean-agent-core = { path = "crates/lean-agent-core", version = "0.2.0" }
anyhow = "1.0"
camino = { version = "1.1", features = ["serde1"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
ignore = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
toml = "1.1"
tokio = { version = "1.45", features = ["macros", "process", "rt-multi-thread", "time", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
walkdir = "2.5"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
